--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="email">E-mail:</string>
     <string name="descripcion">Descripcion:</string>
 
-    <string name="name">Nombre</string>
+    <string name="name">Nombre:</string>
     <string name="date">1999-07-16</string>
     <string name="telf">+1111111</string>
     <string name="mail">test@test.com</string>
